--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							on the dark side<br />
 							of <a href="location.html">Meganisi</a>.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="#" class="button primary">Menu Card</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">BOOK A TABLE</a>
@@ -56,15 +56,14 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Booking a table guarantees you will get serviced <br> Even on our busiest days!</h2>
+								<p>You can reach us in the morning hours (9:30am - 12:30am). We recommend booking a day in advance.<br>
+								Bookings will only be accepted by phone. We provide an email for non-urgent inquiries.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-gem major style1"><span class="label"><a href="tel:+302645051090">Landline</a></span></span></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Mobile</span></span></li>
+                                                                <li><span class="icon fa-heart major style2"><span class="label"><a href="mailto:me@ilparadiso.gr">E-mail</a></span></span></li>
 							</ul>
 						</div>
 					</section>
