--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Booking a table guarantees you will get serviced <br> Even on our busiest days!</h2>
+								<h2>Booking a table guarantees you will get served <br> Even on our busiest days!</h2>
 								<p>You can reach us in the morning hours (9:30am - 12:30am). We recommend booking a day in advance.<br>
 								Bookings will only be accepted by phone. We provide an email for non-urgent inquiries.</p>
 							</header>
