--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<h2>Il Paradiso</h2>
 							<p>We hide...<br />
 							on the dark side<br />
-							of <a href="location.html">Meganisi</a>.</p>
+							of <a href="location.html">Meganisi</a></p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Menu Card</a></li>
 							</ul>
@@ -61,9 +61,9 @@
 								Bookings will only be accepted by phone. We provide an email for non-urgent inquiries.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-phone major style1"><span class="label"><a href="tel:+302645051090">Landline</a></span></span></li>
-								<li><span class="icon solid fa-mobile major style3"><span class="label">Mobile</span></span></li>
-                                                                <li><span class="icon fa-at major style2"><span class="label"><a href="mailto:me@ilparadiso.gr">E-mail</a></span></span></li>
+								<li><span class="icon solid fa-phone"><span class="label"><a href="tel:+302645051090">Landline</a></span></span></li>
+								<li><span class="icon solid fa-mobile"><span class="label">Mobile</span></span></li>
+                                                                <li><span class="icon solid fa-at"><span class="label"><a href="mailto:me@ilparadiso.gr">E-mail</a></span></span></li>
 							</ul>
 						</div>
 					</section>
