--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 								Bookings will only be accepted by phone. We provide an email for non-urgent inquiries.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon solid fa-phone"><span class="label"><a href="tel:+302645051090">Landline</a></span></span></li>
-								<li><span class="icon solid fa-mobile"><span class="label">Mobile</span></span></li>
-                                                                <li><span class="icon solid fa-at"><span class="label"><a href="mailto:me@ilparadiso.gr">E-mail</a></span></span></li>
+								<li><span class="icon solid fa-phone major"><span class="label"><a href="tel:+302645051090">Landline</a></span></span></li>
+								<li><span class="icon solid fa-mobile major"><span class="label">Mobile</span></span></li>
+                                                                <li><span class="icon solid fa-at major"><span class="label"><a href="mailto:me@ilparadiso.gr">E-mail</a></span></span></li>
 							</ul>
 						</div>
 					</section>
