--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
+	Spectral powered by HTML5 UP modified by Alex Gavrilis
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
@@ -30,7 +29,7 @@
 											<li><a href="generic.html">About Us</a></li>
 											<li><a href="elements.html">Menu Card</a></li>
 											<li><a href="location.html">Location</a></li>
-									                <li><a href="#">BOOK A TABLE</a></li>
+										<li><a href="https://ilparadiso.github.io/restaurant/#major">BOOK A TABLE</a></li>
 										</ul>
 									</div>
 								</li>
