--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 											<li><a href="generic.html">About Us</a></li>
 											<li><a href="elements.html">Menu Card</a></li>
 											<li><a href="location.html">Location</a></li>
-										<li><a href="https://ilparadiso.github.io/restaurant/#major">BOOK A TABLE</a></li>
+										<li><a href="https://ilparadiso.github.io/restaurant/#one">BOOK A TABLE</a></li>
 										</ul>
 									</div>
 								</li>
