--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Location</h2>
+								<p>You will find us on the West coast of Meganisi, directly opposite of the Poros Mountain, set in a beautiful green garden with plenty of shade beneath the olive trees.</p>
+                                                                <p><br>Enjoy a warm meal by the sea, with great views of the blue sea, the south of lefkada, Kefalonia and Ithaca. </p>
+                                                                <p>Gaze upon the many boats passing through the Meganisi channel and enjoy the nearly constant natural breeze the location provides at noon.</p>
 							</div>
 						</section>
 						<section class="spotlight">
