Update location2 at index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Location</h2>
-								<p>You will find us on the West coast of Meganisi, directly opposite of the Poros Mountain, set in a beautiful green garden with plenty of shade beneath the olive trees.</p>
+								<p>You will find us on the <a href="https://www.google.com/maps/place/38%C2%B038'56.3%22N+20%C2%B044'21.5%22E/@38.648978,20.7367351,17z/">West-Coast of Meganisi</a>, directly opposite of the Poros Mountain, set in a beautiful green garden with plenty of shade beneath the olive trees.</p>
                                                                 <p><br>Enjoy a warm meal by the sea, with great views of the blue sea, the south of lefkada, Kefalonia and Ithaca. </p>
                                                                 <p>Gaze upon the many boats passing through the Meganisi channel and enjoy the nearly constant natural breeze the location provides at noon.</p>
 							</div>
