--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Accessible by...<br />
+								Land and Sea!</h2>
+								<p>lorem ipsum</p>
 							</div>
 						</section>
 						<section class="spotlight">
